--- a/ga_scheduler/Gemfile
+++ b/ga_scheduler/Gemfile
@@ -23,7 +23,7 @@ end
 gem 'jquery-rails'
 
 # To use ActiveModel has_secure_password
-# gem 'bcrypt-ruby', '~> 3.0.0'
+gem 'bcrypt-ruby', '~> 3.0.0'
 
 # To use Jbuilder templates for JSON
 # gem 'jbuilder'
@@ -36,3 +36,8 @@ gem 'jquery-rails'
 
 # To use debugger
 # gem 'debugger'
+
+
+# ====ADDITIONAL GEMS=======
+gem 'carrierwave', "0.9.0"
+gem 'rmagick'
